# CodeGuardian

./: .gitignore  .gitlab-ci.yml  AGENTS.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: codeguardian.yml  reusable-review.yml
src/: __init__.py  __main__.py  ai_reviewer.py  diff_parser.py  github_client.py  gitlab_client.py  platform_protocol.py  review.py
tests/: conftest.py  test_ai_reviewer.py  test_diff_parser.py  test_github_client.py  test_gitlab_client.py  test_integration.py  test_platform_protocol.py  test_review.py
tests/fixtures/: event.json
